--- a/portifolio/public/index.html
+++ b/portifolio/public/index.html
@@ -40,6 +40,7 @@
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="assets/css/blobz.min.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
